@@ -12,7 +12,6 @@ int gr_renderstats = 0;
 int gr_badtexture = 0;
 
 extern int VGA_current_mode;
-int Dont_start_sound_objects = 1;
 
 int Window_clip_left,Window_clip_top,Window_clip_right,Window_clip_bot;
 
@@ -103,13 +102,6 @@ void serial_leave_game()
 void network_dump_appletalk_player(ubyte node, ushort net, ubyte socket, int why)
 {
 
-}
-
-int digi_link_sound_to_object2( int org_soundnum, short objnum, int forever, fix max_volume, fix  max_distance );
-int digi_link_sound_to_object3( int org_soundnum, short objnum, int forever, fix max_volume, fix  max_distance, int loop_start, int loop_end )
-{
-	//FIXME: Total hack
-	return digi_link_sound_to_object2(org_soundnum, objnum, forever, max_volume, max_distance);
 }
 
 void digi_stop_digi_sounds(void)
